Added flags to Profile dialog country combobox.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9384 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1187,14 +1187,14 @@ BEGIN
     PUSHBUTTON      "Remove",IDC_WEB_REMOVE,225,133,40,15
 END
 
-IDD_PROFILE_PROFILE DIALOG 0, 0, 282, 159
+IDD_PROFILE_PROFILE DIALOGEX 0, 0, 282, 159
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Profile"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     GROUPBOX        "&Location:",IDC_STATIC,5,5,155,60
     LTEXT           "Country:",IDC_STATIC,15,23,35,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_LOC_COUNTRY,55,23,95,155,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_LOC_COUNTRY,"ComboBoxEx32",CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP,55,23,95,155
     LTEXT           "City:",IDC_STATIC,15,42,35,12,SS_CENTERIMAGE
     COMBOBOX        IDC_LOC_CITY,55,42,95,155,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "&Mapping:",IDC_STATIC,170,5,105,60
