--- a/BugTrap/BugTrap.rc
+++ b/BugTrap/BugTrap.rc
@@ -782,7 +782,7 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,4,0,0
+ FILEVERSION 1,4,0,1
  PRODUCTVERSION 2,7,4,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
@@ -798,10 +798,10 @@ BEGIN
     BEGIN
         BLOCK "000704b0"
         BEGIN
-            VALUE "Comments", "BugTrap - softwarefehler berichterstattung"
+            VALUE "Comments", "BugTrap 1.3.3718.38316 - softwarefehler berichterstattung"
             VALUE "CompanyName", "IntelleSoft"
             VALUE "FileDescription", "BugTrap dynamic link library"
-            VALUE "FileVersion", "1.4.0.0"
+            VALUE "FileVersion", "1.4.0.1"
             VALUE "InternalName", "BugTrap"
             VALUE "LegalCopyright", "Copyright © 2005-2009 IntelleSoft"
             VALUE "OriginalFilename", "BugTrap.dll"
@@ -810,10 +810,10 @@ BEGIN
         END
         BLOCK "040904b0"
         BEGIN
-            VALUE "Comments", "BugTrap - software error reporting tool"
+            VALUE "Comments", "BugTrap 1.3.3718.38316 - software error reporting tool"
             VALUE "CompanyName", "IntelleSoft"
             VALUE "FileDescription", "BugTrap dynamic link library"
-            VALUE "FileVersion", "1.4.0.0"
+            VALUE "FileVersion", "1.4.0.1"
             VALUE "InternalName", "BugTrap"
             VALUE "LegalCopyright", "Copyright © 2005-2009 IntelleSoft"
             VALUE "OriginalFilename", "BugTrap.dll"
